Fixed scrollbar issue for firefox

--- a/public/css/dark_mode.css
+++ b/public/css/dark_mode.css
@@ -176,6 +176,7 @@ nav .navbar-collapse li, nav .navbar-collapse .btn{
 html {
     overflow: scroll;
     overflow-x: hidden;
+    scrollbar-width: none;
 }
 ::-webkit-scrollbar {
     width: 0;  /* Remove scrollbar space */
